--- a/res/layout/affichageitems.xml
+++ b/res/layout/affichageitems.xml
@@ -4,30 +4,28 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
-        <CheckBox
-            android:id="@+id/checkBox1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-		/>
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
 
-        <LinearLayout 
-	   		android:orientation="vertical"
-            android:layout_width="fill_parent" 
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="64dp"
             android:layout_gravity="center_vertical"
-	  		android:layout_weight="1">
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/citation"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                />
+                android:layout_height="38dp" />
 
             <TextView
                 android:id="@+id/auteur"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                />
+                android:layout_width="209dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="right" 
+                android:gravity="right"/>
 
         </LinearLayout>
 
