--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,21 +7,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="72dp"
-        android:onClick="getCitations"
-        android:text="@string/getCitations" />
-    <!-- 
+    
     <ListView 
-        android:id="@android:id/list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-         -->
+            android:id="@+id/lvComplete"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
 
 </RelativeLayout>
